fixed alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+body {
+  margin: 0;
+  width: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
   only screen and (-o-min-device-pixel-ratio: 3/2),
   only screen and (min--moz-device-pixel-ratio: 1.5),
@@ -9,17 +18,8 @@
   }
 }
 
-body {
-  margin: 0;
-  width: 100%;
-  font-size: 24px;
-  box-sizing: border-box;
-  overflow-x: hidden;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+@media only screen and (max-width: 1280px) {
+  html {
+    font-size: 14px !important;
+  }
 }
