--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,50 +1,81 @@
-@media (orientation: portrait) {
-  .wrapper {
-    background: url("./img/responsiveBg.svg") no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 900px;
-  }
-  .hero--wrapper {
-    align-items: flex-start;
-    color: #e3e3e3;
-    font-size: 16px;
-    text-align: center;
-  }
+.wrapper {
+  background: url("./img/bg.svg") no-repeat;
+  background-size: cover;
+  background-color: #e9e9e9;
+  width: 100%;
+  height: 100vh;
 }
-@media (min-width: 768px) and (orientation: landscape) {
+.hero {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  color: #232323;
+  height: 700px;
+}
+
+.hero--wrapper {
+  grid-column: 8/12;
+  align-self: center;
+}
+
+.hero--text h3 {
+  text-align: left;
+  margin-bottom: 0.5em;
+}
+
+.hero--button {
+  box-shadow: 0px 0px 10px -1px rgba(255, 0, 0, 1) !important;
+  -webkit-box-shadow: 0px 0px 16px 1px rgba(255, 0, 0, 1);
+  -moz-box-shadow: 0px 0px 16px 1px rgba(255, 0, 0, 1);
+}
+
+@media only screen and (max-width: 1280px) {
   .wrapper {
     background: url("./img/mdBg.svg") no-repeat;
     background-size: cover;
+    background-color: #e9e9e9;
+    width: 100%;
     height: 100vh;
-    padding: 0;
-    margin: 0;
-    font-size: 1em;
+  }
+  .hero {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
     color: #232323;
+    height: 500px;
   }
-}
 
-@media (min-width: 700px) and (orientation: portrait) {
-  .hero--grid {
-    align-items: flex-end !important;
-    margin-bottom: 0 !important;
-    margin-top: 5rem !important;
-  }
-}
-
-@media (min-width: 1280px) {
-  .wrapper {
-    background: url("./img/bg.svg") no-repeat;
-    background-size: cover;
-    height: 100vh;
-    padding: 0;
-    margin: 0;
-    font-size: 1em;
-    color: #232323;
-  }
   .hero--wrapper {
-    color: #232323;
-    font-size: 1em;
+    grid-column: 8/12;
+    align-self: center;
+  }
+
+  .hero--text h3 {
     text-align: left;
+    margin-bottom: 0.5em;
+  }
+}
+
+@media only screen and (orientation: portrait) {
+  .wrapper {
+    background: url("./img/responsiveBg.svg") no-repeat;
+    background-size: cover;
+    height: 800px;
+  }
+
+  .hero {
+    color: white !important;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .hero--wrapper {
+    text-align: center !important;
+  }
+
+  .hero--text h3 {
+    color: white;
+    text-align: center;
+    margin-bottom: 0.5em;
   }
 }
